--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -163,7 +163,8 @@
         app:layout_constraintTop_toBottomOf="@id/translateButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:visibility="gone"/>
 
 
 
@@ -183,6 +184,7 @@
         android:padding="8dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_volume"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/guideline50"
         app:layout_constraintStart_toStartOf="@id/guideline25"
         app:layout_constraintTop_toBottomOf="@id/translatedText" />
@@ -201,6 +203,7 @@
         android:padding="8dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_share"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/guideline75"
         app:layout_constraintStart_toStartOf="@id/guideline50"
         app:layout_constraintTop_toBottomOf="@id/translatedText" />
@@ -218,6 +221,7 @@
         android:padding="8dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_copy"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline75"
         app:layout_constraintTop_toBottomOf="@id/translatedText" />
