--- a/app/src/main/res/layout/ss.xml
+++ b/app/src/main/res/layout/ss.xml
@@ -164,7 +164,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:visibility="gone"
         />
 
 
@@ -295,7 +294,7 @@
 
     <!-- زر خامس -->
     <ImageButton
-        android:id="@+id/favButton"
+        android:id="@+id/fifthButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -306,7 +305,7 @@
         android:minHeight="48dp"
         android:padding="8dp"
         android:scaleType="centerInside"
-        android:src="@drawable/not_fav"
+        android:src="@drawable/ic_paus"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/guideline20"
         app:layout_constraintStart_toStartOf="parent"
@@ -315,270 +314,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:padding="16dp"-->
-<!--    android:background="#F5F5F5">-->
-
-<!--    &lt;!&ndash; لغة النص الأصلي &ndash;&gt;-->
-<!--    <Spinner-->
-<!--        android:id="@+id/sourceLanguageSpinner"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:minHeight="48dp"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/swapLanguagesButton"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:ignore="SpeakableTextPresentCheck" />-->
-
-<!--    &lt;!&ndash; زر تبديل اللغة &ndash;&gt;-->
-<!--&lt;!&ndash;    <Switch&ndash;&gt;-->
-<!--&lt;!&ndash;        android:id="@+id/switchLanguages"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_width="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_marginStart="8dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_marginEnd="8dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:minHeight="48dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:text="تبديل"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintEnd_toStartOf="@+id/targetLanguageSpinner"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintStart_toEndOf="@id/sourceLanguageSpinner"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
-
-<!--    <ImageButton-->
-<!--        android:id="@+id/swapLanguagesButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:layout_marginEnd="8dp"-->
-<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
-<!--        android:contentDescription="تبديل اللغات"-->
-<!--        android:minWidth="48dp"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:src="@drawable/ic_swap"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/targetLanguageSpinner"-->
-<!--        app:layout_constraintStart_toEndOf="@id/sourceLanguageSpinner"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    &lt;!&ndash; لغة الترجمة &ndash;&gt;-->
-<!--    <Spinner-->
-<!--        android:id="@+id/targetLanguageSpinner"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="8dp"-->
-<!--        android:minHeight="48dp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@id/swapLanguagesButton"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:ignore="SpeakableTextPresentCheck" />-->
-
-<!--    &lt;!&ndash; إدخال النص المراد ترجمته &ndash;&gt;-->
-<!--    <EditText-->
-<!--        android:id="@+id/inputText"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="150dp"-->
-<!--        android:hint="اكتب النص هنا"-->
-<!--        android:gravity="top|start"-->
-<!--        android:background="@drawable/edit_text_bg"-->
-<!--        android:padding="12dp"-->
-<!--        android:textSize="16sp"-->
-<!--        android:inputType="textMultiLine"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/sourceLanguageSpinner"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:layout_marginTop="16dp"/>-->
-
-<!--    &lt;!&ndash; Guidelines لتقسيم الشاشة 4 أقسام &ndash;&gt;-->
-<!--    <androidx.constraintlayout.widget.Guideline-->
-<!--        android:id="@+id/guideline25"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintGuide_percent="0.25" />-->
-
-
-
-
-
-<!--    <androidx.constraintlayout.widget.Guideline-->
-<!--        android:id="@+id/guideline50"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintGuide_percent="0.50" />-->
-
-<!--    <androidx.constraintlayout.widget.Guideline-->
-<!--        android:id="@+id/guideline75"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintGuide_percent="0.75" />-->
-<!--    &lt;!&ndash; زر لصق &ndash;&gt;-->
-<!--    <ImageButton-->
-<!--        android:id="@+id/pasteButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginEnd="4dp"-->
-<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
-<!--        android:backgroundTint="#4CAF50"-->
-<!--        android:contentDescription="لصق"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:padding="8dp"-->
-<!--        android:scaleType="centerInside"-->
-<!--        android:src="@drawable/ic_paste"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/guideline25"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/inputText" />-->
-
-<!--    <ImageButton-->
-<!--        android:id="@+id/camButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginEnd="4dp"-->
-<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
-<!--        android:backgroundTint="#4CAF50"-->
-<!--        android:contentDescription="لصق"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:padding="8dp"-->
-<!--        android:scaleType="centerInside"-->
-<!--        android:src="@drawable/ic_img"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/guideline50"-->
-<!--        app:layout_constraintStart_toStartOf="@id/guideline25"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/inputText" />-->
-
-<!--    &lt;!&ndash; زر الترجمة &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/translateButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="ترجم"-->
-<!--        android:backgroundTint="#2196F3"-->
-<!--        android:textColor="#FFFFFF"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:enabled="false"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/pasteButton"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
-
-<!--    &lt;!&ndash; النص المترجم &ndash;&gt;-->
-<!--    <EditText-->
-<!--        android:id="@+id/translatedText"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="150dp"-->
-<!--        android:hint="الترجمة تظهر هنا"-->
-<!--        android:gravity="top|start"-->
-<!--        android:background="@drawable/edit_text_bg"-->
-<!--        android:padding="12dp"-->
-<!--        android:textSize="16sp"-->
-<!--        android:focusable="false"-->
-<!--        android:inputType="textMultiLine"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/translateButton"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:visibility="gone"/>-->
-
-
-
-
-
-
-<!--    &lt;!&ndash; زر صوت &ndash;&gt;-->
-<!--    <ImageButton-->
-<!--        android:id="@+id/speakButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="4dp"-->
-<!--        android:layout_marginEnd="4dp"-->
-
-<!--        android:contentDescription="صوت"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:padding="8dp"-->
-<!--        android:scaleType="centerInside"-->
-<!--        android:background="@drawable/ic_mic"-->
-
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/guideline50"-->
-<!--        app:layout_constraintStart_toStartOf="@id/guideline25"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/translatedText" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/pauseIcon"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:src="@drawable/ic_paus"-->
-<!--        android:scaleType="centerInside"-->
-<!--        android:background="@drawable/ic_paus"-->
-<!--        android:contentDescription="Pause Audio"-->
-<!--        android:visibility="gone"-->
-<!--        android:clickable="true"-->
-<!--        android:focusable="true"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/guideline50"-->
-<!--        app:layout_constraintStart_toStartOf="@id/guideline25"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/translatedText"/>-->
-
-<!--    &lt;!&ndash; زر مشاركة &ndash;&gt;-->
-<!--    <ImageButton-->
-<!--        android:id="@+id/shareButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="4dp"-->
-<!--        android:layout_marginEnd="4dp"-->
-<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
-<!--        android:backgroundTint="#2196F3"-->
-<!--        android:contentDescription="مشاركة"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:padding="8dp"-->
-<!--        android:scaleType="centerInside"-->
-<!--        android:src="@drawable/ic_share"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/guideline75"-->
-<!--        app:layout_constraintStart_toStartOf="@id/guideline50"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/translatedText" />-->
-
-<!--    &lt;!&ndash; زر نسخ &ndash;&gt;-->
-<!--    <ImageButton-->
-<!--        android:id="@+id/copyButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="4dp"-->
-<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
-<!--        android:backgroundTint="#2196F3"-->
-<!--        android:contentDescription="نسخ"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:padding="8dp"-->
-<!--        android:scaleType="centerInside"-->
-<!--        android:src="@drawable/ic_copy"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="@id/guideline75"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/translatedText" />-->
-
-<!--    <ImageButton-->
-<!--        android:id="@+id/clearButton"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="4dp"-->
-<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
-<!--        android:backgroundTint="#F44336"-->
-<!--        android:contentDescription="حذف"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:padding="8dp"-->
-<!--        android:scaleType="centerInside"-->
-<!--        android:src="@drawable/ic_clear"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/guideline25"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/translatedText"-->
-<!--        android:visibility="gone"/>-->
-
-
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
